# airbnb-clone

./: README.md  memo  pyproject.toml
bookings/: admin.py  models.py  serializers.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializers.py  types.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py  permissions.py  serializers.py  views.py
config/: authentication.py  schema.py  settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py  0003_alter_chattingroom_users.py  0004_alter_chattingroom_users.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py  0003_alter_experience_category_alter_experience_host_and_more.py  0004_alter_experience_end_alter_experience_start.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  (+1 more)
medias/: admin.py  models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  (+4 more)
reviews/: admin.py  models.py  serializers.py  types.py
rooms/: admin.py  models.py  mutations.py  queries.py  schema.py  serializers.py  tests.py  types.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  types.py  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
(+16 files in other folders)
