[tool.poetry]
name = "airbnb-clone"
version = "0.1.0"
description = ""
authors = ["kjw <kjw8971@naver.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_clone"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
pillow = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
