[tool.poetry]
name = "airbnb-clone"
version = "0.1.0"
description = ""
authors = ["kjw <kjw8971@naver.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_clone"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
pillow = "^9.3.0"
djangorestframework = "^3.14.0"
strawberry-graphql = {extras = ["debug-server"], version = "^0.151.0"}
strawberry-graphql-django = "^0.8.2"
pyjwt = "^2.6.0"
django-environ = "^0.9.0"
django-cors-headers = "^3.13.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
